MODUSERS-541 Upgrade to Vert.x v5.0.6 (#440)